Feature: eslilizacao do header

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
       integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Enio Nicael</title>
   </head>
   <body>
     <div class="container">
       <header class="header">
-        <div class="name">
+        <div class="introduce">
           <h1>Enio Nicael</h1>
           <h2>Frontend Dev</h2>
         </div>
-        <nav id="menu">
+        <nav class="nav" id="menu">
           <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Projects</a></li>
@@ -69,6 +69,6 @@
         </ul>
       </footer>
     </div>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
