--- a/index.html
+++ b/index.html
@@ -31,14 +31,23 @@
           </ul>
         </nav>
       </header>
-      <div class="quantico">
+      <!-- <div class="quantico">
         <p>quantico</p>
         <p>$ whoami</p>
         <p>flinn</p>
         <p>kill -9 23440</p>
         <p>make install</p>
-      </div>
-      <hr />
+      </div> -->
+      <main>
+        <div class="container">
+          <h3 class="sub-title">Sobre Mim</h3>
+          <div class="bio">
+            <img class="bio-image img-container" src="img/enio.jpg" alt="Foto de perfil Enio Nicael">
+            <p>Sou apaixonado por tecnologias, desenvolvimento web/mobile, software livre, conhecer pessoas, lugares, fazer novas amizades. 
+              Sempre em busca de aperfeiçoamento pessoal/profissional e buscando participar de projetos que visam melhorar e facilitar a vida das pessoas.</p>
+          </div>
+        </div>
+      </main>
       <footer class="footer">
         <ul>
           <li>
