Feature: adiciona secao de projetos.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,33 @@
               Sempre em busca de aperfeiçoamento pessoal/profissional e buscando participar de projetos que visam melhorar e facilitar a vida das pessoas.</p>
           </div>
         </div>
+        <div class="container">
+          <h3 class="sub-title">Skills</h3>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Javascritp</li>
+          </ul>
+        </div>
+        <div class="container">
+          <h3 class="sub-title">projetos</h3>
+          <div class="projects">
+            <div class="folder">
+              <a href="projects/" target="_blank">
+                <h4>Meme Generator</h4>
+              </a>
+              <img src="img/folder.png" alt="">
+            </div>
+            <div class="folder">
+              <h4>Color Picker</h4>
+              <img src="img/folder.png" alt="">
+            </div>
+            <div class="folder">
+              <h4>Color Guess</h4>
+              <img src="img/folder.png" alt="">
+            </div>
+          </div>
+        </div>
       </main>
       <footer class="footer">
         <ul>
